# bedrock-chatbot-llama2-langchain-streamlit

./: .gitignore  README.md  backend.py  pyproject.toml
