[project]
name = "bedrock-chatbot-llama2-langchain-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.28.0",
    "langchain>=0.1.0",
    "langchain-aws>=0.2.15",
    "python-dotenv>=1.0.0",
    "ruff>=0.11.0",
    "streamlit>=1.29.0",
]
